Fixed header of htmls

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="centertext"><!-- 中央寄せ -->
     <header>
         <div class="logo">
-            <a class="noeffect" href="https://haibala.com/"><img class="logo" src="./data/logo/Haibalacom_b.png" alt="Haibala.com logo"></a>
+            <a class="noeffect logo" href="https://haibala.com/"><img class="logo" src="./data/logo/Haibalacom_b.png" alt="Haibala.com logo"></a>
         </div>
         <div class="logo">
             <img class="icon round shadowrotate default" src="data/icon.png" alt="Haibala icon" width="128px" onclick="alert('なんで触ったんですか？変態さんですか？')">
