--- a/nostr.html
+++ b/nostr.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <a class="noeffect" href="https://haibala.com/">
+                <img class="default logo" src="./data/logo/Haibalacom_b.png" alt="Haibala.com logo">
+            </a>
+        </div>
         <h1>備忘録:Nostr</h1>
     </header>
     
