--- a/redirect-https.html
+++ b/redirect-https.html
@@ -25,6 +25,11 @@
 </head>
 <body class="article">  <!-- 記事なので少し幅広の中央寄せ -->
     <header>
+        <div class="logo">
+            <a class="noeffect" href="https://haibala.com/">
+                <img class="default logo" src="./data/logo/Haibalacom_b.png" alt="Haibala.com logo">
+            </a>
+            </div>
         <p class="updated-date">更新：<time id="modify"></time></p>
             <!-- 更新日の表示 -->
         <h1>Cloudflareでhttpsにリダイレクトする方法</h1>
