Changed favicon's pass absolute

--- a/nostr.html
+++ b/nostr.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Nisuru Haibala">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/main.css" type="text/css">
-<link rel="shortcut icon" href="data/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://haibala.com/data/favicon.ico" type="image/x-icon">
     <!-- Converted by https://ao-system.net/alphaicon/ -->
 </head>
 <body>
