--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="Nisuru Haibala">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/main.css" type="text/css">
-<link rel="shortcut icon" href="data/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://haibala.com/data/favicon.ico" type="image/x-icon">
     <!-- Converted by https://ao-system.net/alphaicon/ -->
 <script src="https://kit.fontawesome.com/7f0fbb83bf.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
