Fixed overflow about ul.box 	modified:   css/main.css 	modified:   index.html 	modified:   mfm-cheetsheet.html 	modified:   redirect-https.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- ogp start -->
 <meta property="og:description" content="輩原にするの自己紹介、各サービスアカウント、備忘録はこちら。">
 <meta property="og:title" content="Haibala">
-<meta property="og:image" content="https://haibala.com/data\ogp-light.png">
+<meta property="og:image" content="https://haibala.com/data/ogp-light.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:type" content="website">
