--- a/mfm-cheetsheet.html
+++ b/mfm-cheetsheet.html
@@ -17,7 +17,7 @@
 <!-- ogp start -->
 <meta property="og:description" content="Misskey v13の文字修飾コード一覧">
 <meta property="og:title" content="MFMチートシート | Haibala">
-<meta property="og:image" content="https://haibala.com/data\mfm-cheetsheet/mfm-cheetsheetogp.png">
+<meta property="og:image" content="https://haibala.com/data/mfm-cheetsheet/mfm-cheetsheetogp.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:type" content="website">
@@ -200,7 +200,7 @@ $[twitch.speed=10s 10秒1周期で動き回る]
 ブロック
 ```
     </code></pre>
-    <img class="default" height="120px" src="./data/mfm-cheetsheet/mfm-code.png" alt="MFM コード">
+    <img class="default" width="80%" src="./data/mfm-cheetsheet/mfm-code.png" alt="MFM コード">
     <p class="space">
         Markdownと同様。バッククォートという記号で、スマホではキーボードから直接入力できない場合が多いので、頻繁に使う場合はユーザー辞書登録するなど。
     </p>
@@ -276,7 +276,7 @@ Misskey search
 Misskey [Search]
 Misskey [検索]
     </code></pre>
-    <img class="default" height="30px" src="./data/mfm-cheetsheet/mfm-search.png" alt="MFM Google検索">
+    <img class="default" width="80%" src="./data/mfm-cheetsheet/mfm-search.png" alt="MFM Google検索">
 
     <h3 id="other">その他</h3>
     <details>
