--- a/redirect-https.html
+++ b/redirect-https.html
@@ -16,7 +16,7 @@
 <!-- ogp start -->
 <meta property="og:description" content="Github Pages等で作成したウェブサイトをCloudflareのページルールを使ってhttpsにリダイレクトさせる方法">
 <meta property="og:title" content="Cloudflareでhttpsにリダイレクトする方法 | Haibala">
-<meta property="og:image" content="https://haibala.com\data\redirect-https/ogp-redirect-https.png">
+<meta property="og:image" content="https://haibala.com/data/redirect-https/ogp-redirect-https.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:type" content="website">
